...
        <string name="app_name">SoundMeterPG</string>
        <string name="app_description">SoundMeterPG app created for Politechnika Gdańska</string>
        <string name="main_icon_description">SoundMeterPGIcon</string>
        <string name="email_contact">help@soundmeterpg.pl</string>

        <!--Settings MainActivity-->
        <string name="title_settings">Settings</string>

        <!--Settings Application-->
        <string name="application_settings">Application Settings</string>
        <!--Preference Application-->
        <string name="private_data_key_preference">processing_private_data</string>
        <string name="private_data_title_preference">Processing personal data</string>
...
        <string name="calibrate_key_preference">calibrate_key_preference</string>
        <string name="calibrate_title_preference">Calibrate your device</string>
        <string name="calibrate_summary_preference">Calibrate the device in order to improve the quality of measurements.</string>
        <string name="calibrate_msg_preference">db</string>

    <!-- About Dialog MainActivity-->
        <string name="title_about_dialog">About</string>
        <string name="author_about_dialog">Created by Dudziak Daniel and Gierłowski Filip for Gdańsk University of Technology</string>
        <string name="icon_description_about_dialog">Politechnika Gdańska</string>
        <string name="contact_us_title_about_dialog">Contact us:</string>
        <string name="version_about_title_dialog">Version:</string>
        <string name="last_build_about_title_dialog">Last Build:</string>

        <!--FAQ Dialog MainActivity-->
...
    <string name="question_about_project_source">7. Where is source code?</string>
    <string name="answer_about_project_source">Our project is a free software so you can see the source code <a href="https://github.com/dandudzi/SoundMeterPG/">here</a></string>

    <!-- Question 8 -->
    <string name="question_about_web_page">8. What is the address of the page?</string>
    <string name="answer_about_web_page">Our WebSite address is <a href="http://soundmeterpg.pl">http://soundmeterpg.pl</a></string>
        <string name="title_faq_dialog">Frequently Asked Question</string>
    <string name="icon_description_faq_dialog">Politechnika Gdańska</string>


    <!-- Login Activity-->
    <string name="login_button_text">Login</string>
    <string name="skip_button_text_login_activity">Skip</string>
...
